Added a few more notes and references to human sources.

--- a/tex/p074.tex
+++ b/tex/p074.tex
@@ -92,16 +92,24 @@
 \vs p074 8:2 The legend of the making of the world in six days was an afterthought, in fact, more than 30,000 years afterwards. One feature of the narrative, the sudden appearance of the sun and moon, may have taken origin in the traditions of the onetime sudden emergence of the world from a dense space cloud of minute matter which had long obscured both sun and moon.
 \vs p074 8:3 The story of creating Eve out of Adam’s rib is a confused condensation of the Adamic arrival and the celestial surgery connected with the interchange of living substances associated with the coming of the corporeal staff of the Planetary Prince more than 450,000 years previously.
 \vs p074 8:4 \pc The majority of the world’s peoples have been influenced by the tradition that Adam and Eve had physical forms created for them upon their arrival on Urantia. The belief in man’s having been created from clay was well\hyp{}nigh universal in the Eastern Hemisphere; this tradition can be traced from the Philippine Islands around the world to Africa. And many groups accepted this story of man’s clay origin by some form of special creation in the place of the earlier beliefs in progressive creation --- evolution.
-\vs p074 8:5 Away from the influences of Dalamatia and Eden, mankind tended toward the belief in the gradual ascent of the human race. The fact of evolution is not a modern discovery; the ancients understood the slow and evolutionary character of human progress. The early Greeks had clear ideas of this despite their proximity to Mesopotamia. Although the various races of earth became sadly mixed up in their notions of evolution, nevertheless, many of the primitive tribes believed and taught that they were the descendants of various animals. Primitive peoples made a practice of selecting for their “totems” the animals of their supposed ancestry. Certain North American Indian tribes believed they originated from beavers and coyotes. Certain African tribes teach that they are descended from the hyena, a Malay tribe from the lemur, a New Guinea group from the parrot.
+\vs p074 8:5 Away from the influences of Dalamatia and Eden, mankind tended toward the belief in the gradual ascent of the human race. The fact of evolution is not a modern discovery; the ancients understood the slow and evolutionary character of human progress. The early Greeks had clear ideas of this despite their proximity to Mesopotamia. Although the various races of earth became sadly mixed up in their notions of evolution, nevertheless, many of the primitive tribes believed and taught that they were the descendants of various animals. Primitive peoples made a practice of selecting for their “totems” the animals of their supposed ancestry. Certain North American Indian tribes believed they originated from beavers and coyotes. Certain African tribes\fnst{The human source \cite{Peake1} names the tribe~--- ``the Wanika tribe in East Africa''.} teach that they are descended from the hyena, a Malay tribe from the lemur\fnst{More specifically, the babacoote, a large lemur, according to the human source \cite{Peake1}.}, a New Guinea group\fnst{Namely, the Bukana, according to \cite{Peake1}.} from the parrot.
 \vs p074 8:6 The Babylonians, because of immediate contact with the remnants of the civilization of the Adamites, enlarged and embellished the story of man’s creation; they taught that he had descended directly from the gods. They held to an aristocratic origin for the race which was incompatible with even the doctrine of creation out of clay.
 \vs p074 8:7 \pc The Old Testament account of creation dates from long after the time of Moses; he never taught the Hebrews such a distorted story. But he did present a simple and condensed narrative of creation to the Israelites, hoping thereby to augment his appeal to worship the Creator, the Universal Father, whom he called the Lord God of Israel.
 \vs p074 8:8 In his early teachings, Moses very wisely did not attempt to go back of Adam’s time, and since Moses was the supreme teacher of the Hebrews, the stories of Adam became intimately associated with those of creation. That the earlier traditions recognized pre\hyp{}Adamic civilization is clearly shown by the fact that later editors, intending to eradicate all reference to human affairs before Adam’s time, neglected to remove the telltale reference to Cain’s emigration to the “land of Nod,” where he took himself a wife.
-\vs p074 8:9 The Hebrews had no written language in general usage for a long time after they reached Palestine. They learned the use of an alphabet from the neighbouring Philistines, who were political refugees from the higher civilization of Crete. The Hebrews did little writing until about 900\,B.C., and having no written language until such a late date, they had several different stories of creation in circulation, but after the Babylonian captivity they inclined more toward accepting a modified Mesopotamian version.
+\vs p074 8:9 The Hebrews had no written language in general usage for a long time after they reached Palestine. They learned the use of an alphabet from the neighbouring Philistines, who were political refugees from the higher civilization of Crete\fnst{The Minoan civilization, according to \cite{Peake1}}. The Hebrews did little writing until about 900\,B.C.\fnst{The human source \cite{Peake1} says more vaguely ``the eighth, or at the earliest, the ninth century before Christ''.}, and having no written language until such a late date, they had several different stories of creation in circulation, but after the Babylonian captivity they inclined more toward accepting a modified Mesopotamian version.
 \vs p074 8:10 Jewish tradition became crystallized about Moses, and because he endeavoured to trace the lineage of Abraham back to Adam, the Jews assumed that Adam was the first of all mankind. Yahweh was the creator, and since Adam was supposed to be the first man, he must have made the world just prior to making Adam. And then the tradition of Adam’s six days got woven into the story, with the result that almost a thousand years after Moses’ sojourn on earth the tradition of creation in six days was written out and subsequently credited to him.
 \vs p074 8:11 When the Jewish priests returned to Jerusalem, they had already completed the writing of their narrative of the beginning of things. Soon they made claims that this recital was a recently discovered story of creation written by Moses. But the contemporary Hebrews of around 500\,B.C. did not consider these writings to be divine revelations; they looked upon them much as later peoples regard mythological narratives.
-\vs p074 8:12 This spurious document, reputed to be the teachings of Moses, was brought to the attention of Ptolemy, the Greek king of Egypt, who had it translated into Greek by a commission of 70 scholars for his new library at Alexandria. And so this account found its place among those writings which subsequently became a part of the later collections of the “sacred scriptures” of the Hebrew and Christian religions. And through identification with these theological systems, such concepts for a long time profoundly influenced the philosophy of many Occidental peoples.
+\vs p074 8:12 This spurious document, reputed to be the teachings of Moses, was brought to the attention of Ptolemy\fnst{The human source \cite{Peake1} says this was Ptolemy Philadelphus.}, the Greek king of Egypt, who had it translated into Greek by a commission of 70 scholars for his new library at Alexandria. And so this account found its place among those writings which subsequently became a part of the later collections of the “sacred scriptures” of the Hebrew and Christian religions. And through identification with these theological systems, such concepts for a long time profoundly influenced the philosophy of many Occidental peoples.
 \vs p074 8:13 The Christian teachers perpetuated the belief in the fiat creation of the human race, and all this led directly to the formation of the hypothesis of a onetime golden age of utopian bliss and the theory of the fall of man or superman which accounted for the nonutopian condition of society. These outlooks on life and man’s place in the universe were at best discouraging since they were predicated upon a belief in retrogression rather than progression, as well as implying a vengeful Deity, who had vented wrath upon the human race in retribution for the errors of certain onetime planetary administrators.
 \vs p074 8:14 \pc The “golden age” is a myth, but Eden was a fact, and the Garden civilization was actually overthrown. Adam and Eve carried on in the Garden for 117 years when, through the impatience of Eve and the errors of judgment of Adam, they presumed to turn aside from the ordained way, speedily bringing disaster upon themselves and ruinous retardation upon the developmental progression of all Urantia.
 \vsetoff
 \vs p074 8:15 [Narrated by Solonia, the seraphic “voice in the Garden.”]
 \quizlink
+\tunemarkuptwo{nobiblio}{}{%
+\begin{thebibliography}{100}
+\bibitem{Peake1}
+Harold Peake \&\ Herbert John Fleure.
+{``The Corridors of Time I: Apes \&\ Men.''}
+{\em Oxford: Clarendon Press}, 1927.
+\end{thebibliography}
+}
