--- a/tex/p077.tex
+++ b/tex/p077.tex
@@ -66,7 +66,7 @@
 \vs p077 5:7 \pc Adamson lived for 396 years. Many times he returned to visit his father and mother. Every seven years he and Ratta journeyed south to the second garden, and meanwhile the midwayers kept him informed regarding the welfare of his people. During Adamson’s life they did great service in upbuilding a new and independent world centre for truth and righteousness.
 \vs p077 5:8 Adamson and Ratta thus had at their command this corps of marvellous helpers, who laboured with them throughout their long lives to assist in the propagation of advanced truth and in the spread of higher standards of spiritual, intellectual, and physical living. And the results of this effort at world betterment never did become fully eclipsed by subsequent retrogressions.
 \vs p077 5:9 \pc The Adamsonites maintained a high culture for almost 7,000 years from the times of Adamson and Ratta. Later on they became admixed with the neighbouring Nodites and Andonites and were also included among the “mighty men of old.” And some of the advances of that age persisted to become a latent part of the cultural potential which later blossomed into European civilization.
-\vs p077 5:10 This centre of civilization was situated in the region east of the southern end of the Caspian Sea, near the Kopet Dagh. A short way up in the foothills of Turkestan are the vestiges of what was onetime the Adamsonite headquarters of the violet race. In these highland sites, situated in a narrow and ancient fertile belt lying in the lower foothills of the Kopet range, there successively arose at various periods four diverse cultures respectively fostered by four different groups of Adamson’s descendants. It was the second of these groups which migrated westward to Greece and the islands of the Mediterranean. The residue of Adamson’s descendants migrated north and west to enter Europe with the blended stock of the last Andite wave coming out of Mesopotamia, and they were also numbered among the Andite\hyp{}Aryan invaders of India.
+\vs p077 5:10 This centre of civilization was situated in the region east of the southern end of the Caspian Sea, near the Kopet Dagh\fnst{In the human source \cite{Peake1} this region is called ``the province of Russian Turkestan''.}. A short way up in the foothills of Turkestan are the vestiges of what was onetime the Adamsonite headquarters of the violet race. In these highland sites, situated in a narrow and ancient fertile belt lying in the lower foothills of the Kopet range, there successively arose at various periods four diverse cultures respectively fostered by four different groups of Adamson’s descendants. It was the second of these groups which migrated westward to Greece and the islands of the Mediterranean. The residue of Adamson’s descendants migrated north and west to enter Europe with the blended stock of the last Andite wave coming out of Mesopotamia, and they were also numbered among the Andite\hyp{}Aryan invaders of India.
 \usection{The Secondary Midwayers}
 \vs p077 6:1 While the primary midwayers had a well\hyp{}nigh superhuman origin, the secondary order are the offspring of the pure Adamic stock united with a humanized descendant of ancestors common to the parentage of the senior corps.
 \vs p077 6:2 Among the children of Adamson there were just 16 of the peculiar progenitors of the secondary midwayers. These unique children were equally divided as regards sex, and each couple was capable of producing a secondary midwayer every 70 days by a combined technique of sex and nonsex liaison. And such a phenomenon was never possible on earth before that time, nor has it ever occurred since.
