--- a/tex/p078.tex
+++ b/tex/p078.tex
@@ -34,7 +34,7 @@
 \vs p078 3:1 The violet race retained the Edenic traditions of peacefulness for many millenniums, which explains their long delay in making territorial conquests. When they suffered from population pressure, instead of making war to secure more territory, they sent forth their excess inhabitants as teachers to the other races. The cultural effect of these earlier migrations was not enduring, but the absorption of the Adamite teachers, traders, and explorers was biologically invigorating to the surrounding peoples.
 \vs p078 3:2 Some of the Adamites early journeyed westward to the valley of the Nile; others penetrated eastward into Asia, but these were a minority. The mass movement of the later days was extensively northward and thence westward. It was, in the main, a gradual but unremitting northward push, the greater number making their way north and then circling westward around the Caspian Sea into Europe.
 \vs p078 3:3 About 25,000 years ago many of the purer elements of the Adamites were well on their northern trek. And as they penetrated northward, they became less and less Adamic until, by the times of their occupation of Turkestan, they had become thoroughly admixed with the other races, particularly the Nodites. Very few of the pure\hyp{}line violet peoples ever penetrated far into Europe or Asia.
-\vs p078 3:4 From about 30,000 to 10,000\,B.C. epoch\hyp{}making racial mixtures were taking place throughout south\hyp{}western Asia. The highland inhabitants of Turkestan were a virile and vigorous people. To the north\hyp{}west of India much of the culture of the days of Van persisted. Still to the north of these settlements the best of the early Andonites had been preserved. And both of these superior races of culture and character were absorbed by the northward\hyp{}moving Adamites. This amalgamation led to the adoption of many new ideas; it facilitated the progress of civilization and greatly advanced all phases of art, science, and social culture.
+\vs p078 3:4 From about 30,000 to 10,000\,B.C. epoch\hyp{}making racial mixtures were taking place throughout south\hyp{}western Asia. The highland inhabitants of Turkestan\fnst{The human source \cite{Peake1} reads: ``the more robust inhabitants of the Russian and Turkestan steppes and loess.''} were a virile and vigorous people. To the north\hyp{}west of India much of the culture of the days of Van persisted. Still to the north of these settlements the best of the early Andonites had been preserved. And both of these superior races of culture and character were absorbed by the northward\hyp{}moving Adamites. This amalgamation led to the adoption of many new ideas; it facilitated the progress of civilization and greatly advanced all phases of art, science, and social culture.
 \vs p078 3:5 \pc As the period of the early Adamic migrations ended, about 15,000\,B.C., there were already more descendants of Adam in Europe and central Asia than anywhere else in the world, even than in Mesopotamia. The European blue races had been largely infiltrated. The lands now called Russia and Turkestan were occupied throughout their southern stretches by a great reservoir of the Adamites mixed with Nodites, Andonites, and red and yellow Sangiks. Southern Europe and the Mediterranean fringe were occupied by a mixed race of Andonite and Sangik peoples --- orange, green, and indigo --- with a sprinkling of the Adamite stock. Asia Minor and the central\hyp{}eastern European lands were held by tribes that were predominantly Andonite.
 \vs p078 3:6 A blended coloured race, about this time greatly reinforced by arrivals from Mesopotamia, held forth in Egypt and prepared to take over the disappearing culture of the Euphrates valley. The black peoples were moving farther south in Africa and, like the red race, were virtually isolated.
 \vs p078 3:7 The Saharan civilization had been disrupted by drought and that of the Mediterranean basin by flood. The blue races had, as yet, failed to develop an advanced culture. The Andonites were still scattered over the Arctic and central Asian regions. The green and orange races had been exterminated as such. The indigo race was moving south in Africa, there to begin its slow but long\hyp{}continued racial deterioration.
@@ -55,7 +55,7 @@
 \vs p078 5:4 \pc By 12,000\,B.C. three quarters of the Andite stock of the world was resident in northern and eastern Europe, and when the later and final exodus from Mesopotamia took place, 65\% of these last waves of emigration entered Europe.
 \vs p078 5:5 \pc The Andites not only migrated to Europe but to northern China and India, while many groups penetrated to the ends of the earth as missionaries, teachers, and traders. They contributed considerably to the northern groups of the Saharan Sangik peoples. But only a few teachers and traders ever penetrated farther south in Africa than the headwaters of the Nile. Later on, mixed Andites and Egyptians followed down both the east and west coasts of Africa well below the equator, but they did not reach Madagascar.
 \vs p078 5:6 These Andites were the so\hyp{}called Dravidian and later Aryan conquerors of India; and their presence in central Asia greatly upstepped the ancestors of the Turanians. Many of this race journeyed to China by way of both Sinkiang and Tibet and added desirable qualities to the later Chinese stocks. From time to time small groups made their way into Japan, Formosa, the East Indies, and southern China, though very few entered southern China by the coastal route.
-\vs p078 5:7 132 of this race, embarking in a fleet of small boats from Japan, eventually reached South America and by intermarriage with the natives of the Andes established the ancestry of the later rulers of the Incas. They crossed the Pacific by easy stages, tarrying on the many islands they found along the way. The islands of the Polynesian group were both more numerous and larger then than now, and these Andite sailors, together with some who followed them, biologically modified the native groups in transit. Many flourishing centres of civilization grew up on these now submerged lands as a result of Andite penetration. Easter Island was long a religious and administrative centre of one of these lost groups. But of the Andites who navigated the Pacific of long ago none but the 132 ever reached the mainland of the Americas.
+\vs p078 5:7 132 of this race, embarking in a fleet of small boats from Japan, eventually reached South America\fnst{According to the human source \cite{Elliot1} this happened about 1000\,B.C.} and by intermarriage with the natives of the Andes established the ancestry of the later rulers of the Incas. They crossed the Pacific by easy stages, tarrying on the many islands they found along the way. The islands of the Polynesian group were both more numerous and larger then than now, and these Andite sailors, together with some who followed them, biologically modified the native groups in transit. Many flourishing centres of civilization grew up on these now submerged lands as a result of Andite penetration. Easter Island was long a religious and administrative centre of one of these lost groups. But of the Andites who navigated the Pacific of long ago none but the 132 ever reached the mainland of the Americas.
 \vs p078 5:8 \pc The migratory conquests of the Andites continued on down to their final dispersions, from 8000 to 6000\,B.C. As they poured out of Mesopotamia, they continuously depleted the biologic reserves of their homelands while markedly strengthening the surrounding peoples. And to every nation to which they journeyed, they contributed humour, art, adventure, music, and manufacture. They were skillful domesticators of animals and expert agriculturists. For the time being, at least, their presence usually improved the religious beliefs and moral practices of the older races. And so the culture of Mesopotamia quietly spread out over Europe, India, China, northern Africa, and the Pacific Islands.
 \usection{The Last Andite Dispersions}
 \vs p078 6:1 The last three waves of Andites poured out of Mesopotamia between 8000 and 6000\,B.C. These three great waves of culture were forced out of Mesopotamia by the pressure of the hill tribes to the east and the harassment of the plainsmen of the west. The inhabitants of the Euphrates valley and adjacent territory went forth in their final exodus in several directions:
@@ -68,7 +68,7 @@
 \vs p078 6:8 The cultural age of the second garden was terminated by the increasing infiltration of the surrounding inferior stocks. Civilization moved westward to the Nile and the Mediterranean islands, where it continued to thrive and advance long after its fountainhead in Mesopotamia had deteriorated. And this unchecked influx of inferior peoples prepared the way for the later conquest of all Mesopotamia by the northern barbarians who drove out the residual strains of ability. Even in later years the cultured residue still resented the presence of these ignorant and uncouth invaders.
 \usection{The Floods in Mesopotamia}
 \vs p078 7:1 The river dwellers were accustomed to rivers overflowing their banks at certain seasons; these periodic floods were annual events in their lives. But new perils threatened the valley of Mesopotamia as a result of progressive geologic changes to the north.
-\vs p078 7:2 For thousands of years after the submergence of the first Eden the mountains about the eastern coast of the Mediterranean and those to the north\hyp{}west and north\hyp{}east of Mesopotamia continued to rise. This elevation of the highlands was greatly accelerated about 5000\,B.C., and this, together with greatly increased snowfall on the northern mountains, caused unprecedented floods each spring throughout the Euphrates valley. These spring floods grew increasingly worse so that eventually the inhabitants of the river regions were driven to the eastern highlands. For almost a thousand years scores of cities were practically deserted because of these extensive deluges.
+\vs p078 7:2 For thousands of years after the submergence of the first Eden the mountains about the eastern coast of the Mediterranean and those to the north\hyp{}west and north\hyp{}east of Mesopotamia continued to rise. This elevation of the highlands was greatly accelerated about 5000\,B.C.\fnst{The human source \cite{Peake1} says this elevation occurred about 4500\,B.C.}, and this, together with greatly increased snowfall on the northern mountains, caused unprecedented floods each spring throughout the Euphrates valley. These spring floods grew increasingly worse so that eventually the inhabitants of the river regions were driven to the eastern highlands. For almost a thousand years scores of cities were practically deserted because of these extensive deluges.
 \vs p078 7:3 \pc Almost 5,000 years later, as the Hebrew priests in Babylonian captivity sought to trace the Jewish people back to Adam, they found great difficulty in piecing the story together; and it occurred to one of them to abandon the effort, to let the whole world drown in its wickedness at the time of Noah’s flood, and thus to be in a better position to trace Abraham right back to one of the three surviving sons of Noah.
 \vs p078 7:4 The traditions of a time when water covered the whole of the earth’s surface are universal. Many races harbour the story of a world\hyp{}wide flood some time during past ages. The Biblical story of Noah, the ark, and the flood is an invention of the Hebrew priesthood during the Babylonian captivity. There has never been a universal flood since life was established on Urantia. The only time the surface of the earth was completely covered by water was during those Archeozoic ages before the land had begun to appear.
 \vs p078 7:5 But Noah really lived; he was a wine maker of Aram, a river settlement near Erech. He kept a written record of the days of the river’s rise from year to year. He brought much ridicule upon himself by going up and down the river valley advocating that all houses be built of wood, boat fashion, and that the family animals be put on board each night as the flood season approached. He would go to the neighbouring river settlements every year and warn them that in so many days the floods would come. Finally a year came in which the annual floods were greatly augmented by unusually heavy rainfall so that the sudden rise of the waters wiped out the entire village; only Noah and his immediate family were saved in their houseboat.
@@ -77,16 +77,32 @@
 \usection{The Sumerians --- Last of the Andites}
 \vs p078 8:1 When the last Andite dispersion broke the biologic backbone of Mesopotamian civilization, a small minority of this superior race remained in their homeland near the mouths of the rivers. These were the Sumerians, and by 6000\,B.C. they had become largely Andite in extraction, though their culture was more exclusively Nodite in character, and they clung to the ancient traditions of Dalamatia. Nonetheless, these Sumerians of the coastal regions were the last of the Andites in Mesopotamia. But the races of Mesopotamia were already thoroughly blended by this late date, as is evidenced by the skull types found in the graves of this era.
 \vs p078 8:2 It was during the floodtimes that Susa so greatly prospered. The first and lower city was inundated so that the second or higher town succeeded the lower as the headquarters for the peculiar artcrafts of that day. With the later diminution of these floods, Ur became the centre of the pottery industry. About 7,000 years ago Ur was on the Persian Gulf, the river deposits having since built up the land to its present limits. These settlements suffered less from the floods because of better controlling works and the widening mouths of the rivers.
-\vs p078 8:3 \pc The peaceful grain growers of the Euphrates and Tigris valleys had long been harassed by the raids of the barbarians of Turkestan and the Iranian plateau. But now a concerted invasion of the Euphrates valley was brought about by the increasing drought of the highland pastures. And this invasion was all the more serious because these surrounding herdsmen and hunters possessed large numbers of tamed horses. It was the possession of horses which gave them a tremendous military advantage over their rich neighbours to the south. In a short time they overran all Mesopotamia, driving forth the last waves of culture which spread out over all of Europe, western Asia, and northern Africa.
+\vs p078 8:3 \pc The peaceful grain growers of the Euphrates and Tigris valleys had long been harassed by the raids of the barbarians of Turkestan and the Iranian plateau\fnst{The human source \cite{Peake1} substitutes these with ``the Bedouin who dwelt in the Great Desert of Arabia''.}. But now a concerted invasion of the Euphrates valley was brought about by the increasing drought of the highland pastures. And this invasion was all the more serious because these surrounding herdsmen and hunters possessed large numbers of tamed horses. It was the possession of horses which gave them a tremendous military advantage over their rich neighbours to the south. In a short time they overran all Mesopotamia, driving forth the last waves of culture which spread out over all of Europe, western Asia, and northern Africa.
 \vs p078 8:4 These conquerors of Mesopotamia carried in their ranks many of the better Andite strains of the mixed northern races of Turkestan, including some of the Adamson stock. These less advanced but more vigorous tribes from the north quickly and willingly assimilated the residue of the civilization of Mesopotamia and presently developed into those mixed peoples found in the Euphrates valley at the beginning of historic annals. They quickly revived many phases of the passing civilization of Mesopotamia, adopting the arts of the valley tribes and much of the culture of the Sumerians. They even sought to build a third tower of Babel and later adopted the term as their national name.
 \vs p078 8:5 When these barbarian cavalrymen from the north\hyp{}east overran the whole Euphrates valley, they did not conquer the remnants of the Andites who dwelt about the mouth of the river on the Persian Gulf. These Sumerians were able to defend themselves because of superior intelligence, better weapons, and their extensive system of military canals, which were an adjunct to their irrigation scheme of interconnecting pools. They were a united people because they had a uniform group religion. They were thus able to maintain their racial and national integrity long after their neighbours to the north\hyp{}west were broken up into isolated city\hyp{}states. No one of these city groups was able to overcome the united Sumerians.
 \vs p078 8:6 And the invaders from the north soon learned to trust and prize these peace\hyp{}loving Sumerians as able teachers and administrators. They were greatly respected and sought after as teachers of art and industry, as directors of commerce, and as civil rulers by all peoples to the north and from Egypt in the west to India in the east.
 \vs p078 8:7 After the breakup of the early Sumerian confederation the later city\hyp{}states were ruled by the apostate descendants of the Sethite priests. Only when these priests made conquests of the neighbouring cities did they call themselves kings. The later city kings failed to form powerful confederations before the days of Sargon because of deity jealousy. Each city believed its municipal god to be superior to all other gods, and therefore they refused to subordinate themselves to a common leader.
 \vs p078 8:8 The end of this long period of the weak rule of the city priests was terminated by Sargon, the priest of Kish, who proclaimed himself king and started out on the conquest of the whole of Mesopotamia and adjoining lands. And for the time, this ended the city\hyp{}states, priest\hyp{}ruled and priest\hyp{}ridden, each city having its own municipal god and its own ceremonial practices.
 \vs p078 8:9 After the breakup of this Kish confederation there ensued a long period of constant warfare between these valley cities for supremacy. And the rulership variously shifted between Sumer, Akkad, Kish, Erech, Ur, and Susa.
-\vs p078 8:10 About 2500\,B.C. the Sumerians suffered severe reverses at the hands of the northern Suites and Guites. Lagash, the Sumerian capital built on flood mounds, fell. Erech held out for 30 years after the fall of Akkad. By the time of the establishment of the rule of Hammurabi the Sumerians had become absorbed into the ranks of the northern Semites, and the Mesopotamian Andites passed from the pages of history.
+\vs p078 8:10 About 2500\,B.C.\fnst{The human source \cite{Peake2} gives a more specific date of 2571\,B.C. for the fall of the dynasty with the death of Gimil\hyp{}dural.} the Sumerians suffered severe reverses at the hands of the northern Suites and Guites. Lagash, the Sumerian capital built on flood mounds, fell. Erech held out for 30 years after the fall of Akkad. By the time of the establishment of the rule of Hammurabi the Sumerians had become absorbed into the ranks of the northern Semites, and the Mesopotamian Andites passed from the pages of history.
 \vs p078 8:11 From 2500 to 2000\,B.C. the nomads were on a rampage from the Atlantic to the Pacific. The Nerites\fnst{Could these be the same as ``the people of Nairi'' (arm. \textarm{Նաիրի}), identified with the ancient kingdom of Urartu, also known as the ``Kingdom of Van''? The names ``Nairi'' and ``Urartu'' are used interchangeably in the Assyrian inscriptions of king Ashurnasirpal~II (883--859\,B.C.) and Shalmaneser~III (860--825\,B.C.)} constituted the final eruption of the Caspian group of the Mesopotamian descendants of the blended Andonite and Andite races. What the barbarians failed to do to effect the ruination of Mesopotamia, subsequent climatic changes succeeded in accomplishing.
 \vs p078 8:12 \pc And this is the story of the violet race after the days of Adam and of the fate of their homeland between the Tigris and Euphrates. Their ancient civilization finally fell due to the emigration of superior peoples and the immigration of their inferior neighbours. But long before the barbarian cavalrymen conquered the valley, much of the Garden culture had spread to Asia, Africa, and Europe, there to produce the ferments which have resulted in the XX century civilization of Urantia.
 \vsetoff
 \vs p078 8:13 [Presented by an Archangel of Nebadon.]
 \quizlink
+\tunemarkuptwo{nobiblio}{}{%
+\begin{thebibliography}{100}
+\bibitem{Peake1}
+Harold Peake \&\ Herbert John Fleure.
+{``The Corridors of Time III: Peasants \&\ Potters.''}
+{\em Oxford: Clarendon Press}, 1927.
+\bibitem{Peake2}
+Harold Peake \&\ Herbert John Fleure.
+{``The Corridors of Time V: The Steppe \&\ the Sown.''}
+{\em Oxford: Clarendon Press}, 1927.
+\bibitem{Elliot1}
+G.F. Scott Elliot.
+{``Prehistoric Man and His Story.''}
+{\em London: Seeley, Service \&\ Co. Limited}, 1915.
+\end{thebibliography}
+}
