--- a/tex/p081.tex
+++ b/tex/p081.tex
@@ -29,7 +29,7 @@
 \vs p081 2:9 When asked where fire came from, the simple story of Andon and the flint was soon replaced by the legend of how some Prometheus stole it from heaven. The ancients sought a supernatural explanation for all natural phenomena not within the range of their personal comprehension; and many moderns continue to do this. The depersonalization of so\hyp{}called natural phenomena has required ages, and it is not yet completed. But the frank, honest, and fearless search for true causes gave birth to modern science: It turned astrology into astronomy, alchemy into chemistry, and magic into medicine.
 \vs p081 2:10 \pc In the premachine age the only way in which man could accomplish work without doing it himself was to use an animal. Domestication of animals placed in his hands living tools, the intelligent use of which prepared the way for both agriculture and transportation. And without these animals man could not have risen from his primitive estate to the levels of subsequent civilization.
 \vs p081 2:11 Most of the animals best suited to domestication were found in Asia, especially in the central to south\hyp{}west regions. This was one reason why civilization progressed faster in that locality than in other parts of the world. Many of these animals had been twice before domesticated, and in the Andite age they were retamed once again. But the dog had remained with the hunters ever since being adopted by the blue man long, long before.
-\vs p081 2:12 The Andites of Turkestan were the first peoples to extensively domesticate the horse, and this is another reason why their culture was for so long predominant. By 5000\,B.C. the Mesopotamian, Turkestan, and Chinese farmers had begun the raising of sheep, goats, cows, camels, horses, fowls, and elephants. They employed as beasts of burden the ox, camel, horse, and yak. Man was himself at one time the beast of burden. One ruler of the blue race once had 100,000 men in his colony of burden bearers.
+\vs p081 2:12 The Andites of Turkestan were the first peoples to extensively domesticate the horse\fnst{In the human source \cite{Peake1} we read: ``All the available evidence indicates that the horse was first tamed in some part of the Asiatic steppe. The more lowland portion of this steppe runs from Galicia intermittently to South Russia, and thence continuously across Russian Turkestan with a narrowed eastward extension of varying relief reaching right away to the Sea of Okhotsk.''}, and this is another reason why their culture was for so long predominant. By 5000\,B.C. the Mesopotamian, Turkestan, and Chinese farmers had begun the raising of sheep, goats, cows, camels, horses, fowls, and elephants. They employed as beasts of burden the ox, camel, horse, and yak. Man was himself at one time the beast of burden. One ruler of the blue race once had 100,000 men in his colony of burden bearers.
 \vs p081 2:13 \pc The institutions of slavery and private ownership of land came with agriculture. Slavery raised the master’s standard of living and provided more leisure for social culture.
 \vs p081 2:14 The savage is a slave to nature, but scientific civilization is slowly conferring increasing liberty on mankind. Through animals, fire, wind, water, electricity, and other undiscovered sources of energy, man has liberated, and will continue to liberate, himself from the necessity for unremitting toil. Regardless of the transient trouble produced by the prolific invention of machinery, the ultimate benefits to be derived from such mechanical inventions are inestimable. Civilization can never flourish, much less be established, until man has \bibemph{leisure} to think, to plan, to imagine new and better ways of doing things.
 \vs p081 2:15 \pc Man first simply appropriated his shelter, lived under ledges or dwelt in caves. Next he adapted such natural materials as wood and stone to the creation of family huts. Lastly he entered the creative stage of home building, learned to manufacture brick and other building materials.
@@ -118,3 +118,11 @@
 \vsetoff
 \vs p081 6:45 [Sponsored by an Archangel of Nebadon.]
 \quizlink
+\tunemarkuptwo{nobiblio}{}{%
+\begin{thebibliography}{100}
+\bibitem{Peake1}
+Harold Peake \&\ Herbert John Fleure.
+{``The Corridors of Time III: Peasants \&\ Potters.''}
+{\em Oxford: Clarendon Press}, 1927.
+\end{thebibliography}
+}
